htlcswitch+routerrpc: support unencrypted failure reasons
This commit adds the possibility for users of the htlc
interception api to supply arbitrary pre-encoded failure
messages. LND will only add an hmac and encrypt the message
for the first hop.
